--- a/src/main/resources/templates/arbol/fragmentos.html
+++ b/src/main/resources/templates/arbol/fragmentos.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:replace="~{layout/plantilla :: head}">
-        <title>TechShop</title>
+        <title>Practica01</title>
     </head>
     <body>
         <!-- 1 Sección para crear el boton de agregar... llamará a una ventana modal-->
@@ -16,7 +16,7 @@
                             class="btn btn-primary btn-block" 
                             data-bs-toggle="modal" 
                             data-bs-target="#agregarArbol">
-                            <i class="fas fa-plus"></i> [[#{arbol.agregar}]]
+                            <i class="fas fa-plus"></i> Agregar arbol
                         </button>
                     </div>
                 </div>
@@ -24,8 +24,8 @@
         </section>
 
         <!-- 2 Fragmento para agregar categoria, es la ventana modal -->
-        <section th:fragment="agregarARbol">
-            <div id="agregarARbol" 
+        <section th:fragment="agregarArbol">
+            <div id="agregarArbol" 
                  class="modal fade" 
                  tabindex="-1" 
                  aria-labelledby="exampleModalLabel" 
@@ -33,7 +33,7 @@
                 <div class="modal-dialog modal-md">
                     <div class="modal-content">
                         <div class="modal-header bg-info text-white">
-                            <h5 class="modal-title">[[#{arbol.agregar}]]</h5>
+                            <h5 class="modal-title">Agregar arbol</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div> 
                         <form th:action="@{/arbol/guardar}" th:object="${arbol}"
